# cineprompt-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_POLICY.md  PRODUCT_SPEC.md  PROMPT_SAFETY.md  RELEASE_CHECKLIST.md  TESTING.md  USAGE.md
docs/plans/: v0.1-execution-plan.md
docs/prompts/: CODEX_TASKS.md
scripts/: check.sh  print_mcp_config.sh  smoke_mcp.sh
src/cineprompt_mcp/: __init__.py  config.py  server.py  smoke.py  tools.py
src/cineprompt_mcp/prompts/: __init__.py  cinematic_reference_pack.py  derivative_risk_check.py  shortform_scene_idea.py  video_prompt_from_reference.py
src/cineprompt_mcp/providers/: __init__.py  base.py  mock.py  omdb.py  tmdb.py
src/cineprompt_mcp/schemas/: __init__.py  common.py  person.py  prompt_pack.py  reference_pack.py  risk.py  title.py  tools.py
src/cineprompt_mcp/services/: __init__.py  prompt_builder.py  prompt_safety.py  provider_registry.py  reference_pack_builder.py
tests/contract/: test_mock_provider.py  test_omdb_provider.py  test_tmdb_provider.py
tests/live/: test_omdb_live.py  test_tmdb_live.py
tests/smoke/: test_mcp_smoke.py
tests/snapshots/: test_prompts.py
tests/unit/: test_prompt_safety.py  test_reference_pack_builder.py  test_schemas.py  test_tools.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/search/: page.tsx
web/components/ui/: badge.tsx  (+10 more)
(+15 files in other folders)
