[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cineprompt-mcp"
version = "0.1.0"
description = "MCP server that turns movie/TV metadata into original cinematic reference packs and AI video prompt templates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CinePrompt contributors" }]
keywords = ["mcp", "film", "ai-video", "prompt-engineering"]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.12.4",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[project.scripts]
cineprompt-mcp = "cineprompt_mcp.server:main"
cineprompt-mcp-smoke = "cineprompt_mcp.smoke:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cineprompt_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "live: tests that call live provider APIs and require credentials",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
